--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/apple-icon.png"><!-- 180×180 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rockstar PWA + Push Showcase</title>
   </head>
