--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32×32 -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Rockstar PWA + Push Showcase</title>
   </head>
   <body>
